# cppplugtest

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml
.github/workflows/: build.yml
src/: DistrhoPluginInfo.h  LinearAmplifierPlugin.cpp  LinearAmplifierPlugin.hpp
test/: test_plugin.cpp
